--- a/community.html
+++ b/community.html
@@ -75,7 +75,7 @@
             <h1>Community Staff</h1>
           </div>
           <div class="sbicontent">
-            <h2>President</h2><p>&nbsp;&nbsp;&nbsp;&nbsp;Dr. Aldrin Leung</p>
+            <h2>President</h2><p>&nbsp;&nbsp;&nbsp;&nbsp;Zhendong Chen</p>
           </div>
         </div>
         	    <div class="sidebaritem">
@@ -85,7 +85,7 @@
           <div class="sbicontent">
            <p> For information or to volunteer please contact 
 			Mr. Zhendong Chen at (301) 686-4237 or
-			<a href="mailto:capsa.mcmd@gmail.com">capsa.mcmd@gmail.com</a>.</p>
+			<a href="mailto:capsa.mcmd@gmail.com">president@capsa-mc.org</a></p>
           </div>
         </div>
 
