--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 <p class="MsoNormal">
 <strong>Line 
 Dance Class</strong> &#9472; Line Dance summer classes are held on every Saturdays at the gym 
-in Robert Frost Middle School from 9 AM to noon. &nbsp;All are welcome!&nbsp; For more information, please contact Ms. Carol Hsieh at 240-418-5663 or <a href="mailto:chsieh5678@yahoo.com">
+in Robert Frost Middle School&#12290; &nbsp;All are welcome!&nbsp; For more information, please contact Ms. Carol Hsieh at 240-418-5663 or <a href="mailto:chsieh5678@yahoo.com">
 chsieh5678@yahoo.com</a>.<o:p></o:p></p>
 <p><span class="style21"><b>
 <span lang="ZH-TW" style="font-family:&quot;TSC UKai M TT&quot;;mso-fareast-language:
@@ -221,7 +221,7 @@ ZH-TW"> </span></span></b></span>
 mso-fareast-language:ZH-TW">&#9472; </span>
 </span><font size="3">
 <span lang="ZH-TW" style="line-height: 115%; font-family: DFKai-SB; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-bidi-theme-font: minor-bidi; mso-ansi-language: EN-US; mso-fareast-language: ZH-TW; mso-bidi-language: AR-SA" class="style31">
-&#25490;&#33310;&#29677;</span></font><font size="3"><span lang="ZH-TW" style="line-height: 115%; font-family: DFKai-SB; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-bidi-theme-font: minor-bidi; mso-ansi-language: EN-US; mso-fareast-language: ZH-TW; mso-bidi-language: AR-SA" class="style31">&#36898;&#26143;&#26399;&#20845;&#19978;&#21320;&#20061;&#26178;&#33267;&#20013;&#21320;&#21313;&#20108;&#26178;&#20551;&#20315;&#27931;&#26031;&#29305;&#21021;&#20013;&#39636;&#32946;&#39208;&#38283;&#29677;&#12290;&#22320;&#22336;&#26159;</span></font><span lang="ZH-TW" style="line-height: 115%; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-bidi-theme-font: minor-bidi; mso-ansi-language: EN-US; mso-fareast-language: ZH-TW; mso-bidi-language: AR-SA" class="style32">
+&#25490;&#33310;&#29677;</span></font><font size="3"><span lang="ZH-TW" style="line-height: 115%; font-family: DFKai-SB; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-bidi-theme-font: minor-bidi; mso-ansi-language: EN-US; mso-fareast-language: ZH-TW; mso-bidi-language: AR-SA" class="style31">&#36898;&#26143;&#26399;&#20845;</span><span style="line-height: 115%; font-family: DFKai-SB; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-bidi-theme-font: minor-bidi; mso-ansi-language: EN-US; mso-fareast-language: ZH-TW; mso-bidi-language: AR-SA" class="style31">&#33287;</span><span lang="ZH-TW" style="line-height: 115%; font-family: DFKai-SB; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-bidi-theme-font: minor-bidi; mso-ansi-language: EN-US; mso-fareast-language: ZH-TW; mso-bidi-language: AR-SA" class="style31">&#20315;&#27931;&#26031;&#29305;&#21021;&#20013;&#39636;&#32946;&#39208;&#38283;&#29677;&#12290;&#22320;&#22336;&#26159;</span></font><span lang="ZH-TW" style="line-height: 115%; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-bidi-theme-font: minor-bidi; mso-ansi-language: EN-US; mso-fareast-language: ZH-TW; mso-bidi-language: AR-SA" class="style32">
 </span>
 <span style="line-height: 115%; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-bidi-theme-font: minor-bidi; mso-ansi-language: EN-US; mso-fareast-language: ZH-TW; mso-bidi-language: AR-SA" class="style32">
 9201 Scott Drive, Rockville, MD 20850 </span><font size="3">
