--- a/people.html
+++ b/people.html
@@ -286,7 +286,7 @@ Cashiers</span></strong></h2>
       </ul>
 		<strong>
 		<p>&nbsp;</p>
-<p class="style7"><a href="docs/CAPSA%20Org%20Chart%202018-19.pdf">Click here to 
+<p class="style7"><a href="docs/2019/org-chart.pdf">Click here to 
 view the Organizational Chart</a></p>
 </div>
     </div>
