--- a/tutoring.html
+++ b/tutoring.html
@@ -152,8 +152,7 @@ Craun&nbsp;</span><span style="line-height: 115%; mso-bidi-font-family: &quot;MS
 &quot;TSC UKai M TT&quot;;" class="style3">&#35531;&#25353;&#27492;&#27396;</span>)</a></p>
 	   <p>
       The CAPSA tutoring program has 
-      sessions every Saturday from 10 am to 12 noon, between September 6, 2014
-      and May 16, 2015.&nbsp;
+      sessions every Saturday from 10 am to 12 noon in academic term of MCPS.&nbsp;
       The objective of the CAPSA tutoring program is to provide one-on-one 
       tutoring for needy students and adults in order to provide assistance with their homework and 
 		with adjusting to the American culture and environment.&nbsp; The 
@@ -170,19 +169,13 @@ Craun&nbsp;</span><span style="line-height: 115%; mso-bidi-font-family: &quot;MS
 		or coordinator and $30 for each tutee or adult English class student.&nbsp;  For more information, please contact 
 		Mr. Z<span lang="en-us">engdong Chen</span> at (<span lang="en-us">301</span>) 
 		<span lang="en-us">686-4237</span> or email
-		<a href="mailto:capsa.mcmd@gmail.com">capsa.mcmd@gmail.com</a>.</p>
+		president@<a href="mailto:capsa.mcmd@gmail.com">capsa-mc.org</a>.</p>
 		
         <p class="style2" style="font-family: TSC UKai M TT">
 	<span class="style5">CAPSA</span><span style="font-family: TSC UKai M TT">
                          
       
-&#35506;&#26989;&#36628;&#23566;&#30001;</span><span class="style5"> 201<span lang="en-us">9</span></span> <span style="font-family: TSC UKai M TT">
-&#24180;</span><span class="style5"> 9</span> <span style="font-family: TSC UKai M TT">
-	&#26376; <span lang="en-us">7</span></span> <span style="font-family: TSC UKai M TT">
-&#26085;&#33267; </span><span class="style5">20<span lang="en-us">20</span></span> <span style="font-family: TSC UKai M TT">&#24180;</span>
-<span class="style5">5</span> <span style="font-family: TSC UKai M TT">&#26376;</span><span class="style5"> 16</span> <span style="font-family: TSC UKai M TT">
-&#26085;&#65104;
-      &#36898;&#26143;&#26399;&#20845;&#19978;&#21320;&#21313;&#26178;&#33267;&#20013;&#21320; &#21313;&#20108;&#26178;&#22312;</span><span class="style5">Robert Frost 
+&#35506;&#26989;&#36628;&#23566;&#22312;MCPS&#23416;&#24180;&#20869;&#36898;&#26143;&#26399;&#20845;&#19978;&#21320;&#21313;&#26178;&#33267;&#20013;&#21320; &#21313;&#20108;&#26178;&#22312;</span><span class="style5">Robert Frost 
 	</span> <span style="font-family: TSC UKai M TT">
 		 &#21021;&#20013;&#19978;&#35506; &#12290;&#35506;&#26989;&#36628;&#23566;&#30001;
     &#25104;&#32318;&#20778;&#31168;&#30340;&#20013;&#23416;&#29983;&#25812;&#20219;
