--- a/index.html
+++ b/index.html
@@ -102,6 +102,11 @@
 	font-family: Arial;
 }
 
+.auto-style1 {
+	font-family: DFKai-SB;
+	font-size: 12pt;
+}
+
 </style>
 
 
@@ -286,6 +291,25 @@ mso-ansi-language:EN-US;mso-fareast-language:ZH-TW;mso-bidi-language:AR-SA">
 mso-ascii-font-family:&quot;Times New Roman&quot;;mso-hansi-font-family:&quot;Times New Roman&quot;;
 mso-bidi-font-family:&quot;Times New Roman&quot;;mso-ansi-language:EN-US;mso-fareast-language:
 ZH-TW;mso-bidi-language:AR-SA">&#26597;&#35426;&#12290;</span></p>
+		  <p class="style24" style="height: 27px">
+		  <span class="auto-style1">&#38656;&#35201;&#35831;&#20551;&#30340;&#23567;&#32769;&#24072;&#19982;&#23398;&#29983;&#35831;&#30452;&#25509;&#32852;&#31995;&#21508;&#32452;&#21327;&#35843;&#21592;&#65288;Tutor and Tutee need 
+		  ask for execused absence, please contact lead coordinators in your 
+		  group&#65289;</span></p>
+		  <div style="color: rgb(34, 34, 34); font-family: Arial, Helvetica, sans-serif; font-size: small; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(255, 255, 255); text-decoration-style: initial; text-decoration-color: initial;">
+			  <b><font color="#000000" face="Calibri, Helvetica, sans-serif">
+			  <span style="font-size: 16px;"><br />
+			  HS:&nbsp;&nbsp;</span></font>Justin Yixiang Zhang &lt;<a href="mailto:jz367132@gmail.com" style="color: rgb(17, 85, 204);" target="_blank">jz367132@gmail.com</a>&gt;</b></div>
+		  <div style="color: rgb(34, 34, 34); font-family: Arial, Helvetica, sans-serif; font-size: small; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(255, 255, 255); text-decoration-style: initial; text-decoration-color: initial;">
+			  <b><font color="#000000" face="Calibri, Helvetica, sans-serif">
+			  <span style="font-size: 16px;">MS:&nbsp;</span></font>Steven Tan &lt;<a href="mailto:steventan1227@gmail.com" style="color: rgb(17, 85, 204);" target="_blank">steventan1227@gmail.com</a>&gt;</b></div>
+		  <div style="color: rgb(34, 34, 34); font-family: Arial, Helvetica, sans-serif; font-size: small; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(255, 255, 255); text-decoration-style: initial; text-decoration-color: initial;">
+			  <b><font color="#000000" face="Calibri, Helvetica, sans-serif">
+			  <span style="font-size: 16px;">LES:&nbsp;</span></font>Kenny Cheung &lt;<a href="mailto:kennyc2002@yahoo.com" style="color: rgb(17, 85, 204);" target="_blank">kennyc2002@yahoo.com</a>&gt;</b></div>
+		  <div style="color: rgb(34, 34, 34); font-family: Arial, Helvetica, sans-serif; font-size: small; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(255, 255, 255); text-decoration-style: initial; text-decoration-color: initial;">
+			  <b><font color="#000000" face="Calibri, Helvetica, sans-serif">
+			  <span style="font-size: 16px;"><span>UES</span>:&nbsp;</span></font>Kayden 
+			  Fu &lt;<a href="mailto:k8en712@gmail.com" style="color: rgb(17, 85, 204);" target="_blank">k8en712@gmail.com</a>&gt;<br />
+			  </b></div>
 
 <span class="style14">
 <p class="MsoNormal"><span style="mso-bookmark:OLE_LINK15">
