--- a/index.html
+++ b/index.html
@@ -107,6 +107,10 @@
 	font-size: 12pt;
 }
 
+.auto-style2 {
+	text-decoration: underline;
+}
+
 </style>
 
 
@@ -291,6 +295,16 @@ mso-ansi-language:EN-US;mso-fareast-language:ZH-TW;mso-bidi-language:AR-SA">
 mso-ascii-font-family:&quot;Times New Roman&quot;;mso-hansi-font-family:&quot;Times New Roman&quot;;
 mso-bidi-font-family:&quot;Times New Roman&quot;;mso-ansi-language:EN-US;mso-fareast-language:
 ZH-TW;mso-bidi-language:AR-SA">&#26597;&#35426;&#12290;</span></p>
+<p class="style24">
+<strong><span class="auto-style2">Calendar of Early 2020:</span><br />
+Jan&nbsp;&nbsp;&nbsp; 4, 11, 18, 25<br />
+Feb&nbsp;&nbsp;&nbsp; 1, 8, 15, 22, 29<br />
+Mar&nbsp;&nbsp;&nbsp; 7, 14, 21, 28<br />
+Apr&nbsp;&nbsp;&nbsp; 18, 25<br />
+May&nbsp;&nbsp;&nbsp; 2, 9, 16, 30<br />
+Jun&nbsp;&nbsp;&nbsp;&nbsp; 6<br />
+<span class="auto-style2">Time&nbsp; Saturday 10am - 12 noon</span><br />
+</strong></p>
 		  <p class="style24" style="height: 27px">
 		  <span class="auto-style1">&#38656;&#35201;&#35831;&#20551;&#30340;&#23567;&#32769;&#24072;&#19982;&#23398;&#29983;&#35831;&#30452;&#25509;&#32852;&#31995;&#21508;&#32452;&#21327;&#35843;&#21592;&#65288;Tutor and Tutee need 
 		  ask for execused absence, please contact lead coordinators in your 
