remove 2 day after memorial day

--- a/index.html
+++ b/index.html
@@ -301,8 +301,7 @@ Jan&nbsp;&nbsp;&nbsp; 4, 11, 18, 25<br />
 Feb&nbsp;&nbsp;&nbsp; 1, 8, 15, 22, 29<br />
 Mar&nbsp;&nbsp;&nbsp; 7, 14, 21, 28<br />
 Apr&nbsp;&nbsp;&nbsp; 18, 25<br />
-May&nbsp;&nbsp;&nbsp; 2, 9, 16, 30<br />
-Jun&nbsp;&nbsp;&nbsp;&nbsp; 6<br />
+May&nbsp;&nbsp;&nbsp; 2, 9, 16<br />
 <span class="auto-style2">Time&nbsp; Saturday 10am - 12 noon</span><br />
 </strong></p>
 		  <p class="style24" style="height: 27px">
