--- a/index.html
+++ b/index.html
@@ -111,6 +111,10 @@
 	text-decoration: underline;
 }
 
+.auto-style3 {
+	color: #0000FF;
+}
+
 </style>
 
 
@@ -217,7 +221,14 @@
 <h1>Announcement <span style='font-family:"TSC UKai M TT"'>&#36890;&#21578;</span></h1>
 
 <p class="MsoNormal">
-<strong>Line 
+<span class="auto-style3"><strong>We are renting the facilities of MCPS and our 
+operating status is totally depend on the MCPS board's weather decision. Please 
+keep checking the MCPS website </strong></span>
+<a href="https://www.montgomeryschoolsmd.org/"><strong>
+https://www.montgomeryschoolsmd.org/</strong></a><span class="auto-style3"><strong> 
+for any weather update.</strong></span></p>
+		  <p class="MsoNormal">
+		  <strong>Line 
 Dance Class</strong> &#9472; Line Dance summer classes are held on every Saturdays at the gym 
 in Robert Frost Middle School&#12290; &nbsp;All are welcome!&nbsp; For more information, please contact Ms. Carol Hsieh at 240-418-5663 or <a href="mailto:chsieh5678@yahoo.com">
 chsieh5678@yahoo.com</a>.<o:p></o:p></p>
