--- a/index.html
+++ b/index.html
@@ -115,13 +115,6 @@
 	color: #0000FF;
 }
 
-.auto-style4 {
-	color: #0000FF;
-	background-color: #FFFFFF;
-	background-image: url('style/style/back2.png');
-	background-repeat: repeat-y;
-}
-
 </style>
 
 
@@ -227,9 +220,8 @@
 
 <h1>Announcement <span style='font-family:"TSC UKai M TT"'>&#36890;&#21578;</span></h1>
 
-<p class="MsoNormal">
-<strong><span class="auto-style4">Due to MCPS weather decision, CAPSA close on 
-Jan 18, 2020.&nbsp;&nbsp; &#30001;&#20110;MCPS&#20851;&#20110;&#22825;&#27668;&#30340;&#20915;&#23450;&#65292;CAPSA&#22312;2020&#24180;1&#26376;18&#26085;&#20851;&#38381;</span>&#12290;</strong></p>
+<p class="auto-style3">
+CAPSA will open on Jan 25th, 2020</p>
 		  <p class="MsoNormal">
 		  <span class="auto-style3"><strong>We are renting the facilities of MCPS and our 
 operating status is totally depend on the MCPS board's weather decision. Please 
