--- a/index.html
+++ b/index.html
@@ -221,7 +221,12 @@
 <h1>Announcement <span style='font-family:"TSC UKai M TT"'>&#36890;&#21578;</span></h1>
 
 <p class="auto-style3">
-CAPSA will open on Jan 25th, 2020</p>
+Due to parents' concern and ongoing coronavirus situation,&nbsp; we decide to 
+pause CAPSA program for 2 weeks, which is Feb 1st, 2020 and Feb 8th, 2020.&nbsp; 
+We will continue update this webpage on our open status.</p>
+		  <p class="auto-style3">
+		  &#37492;&#20110;&#30446;&#21069;&#20896;&#29366;&#30149;&#27602;&#30123;&#24773;&#21644;&#23478;&#38271;&#20204;&#30340;&#20851;&#27880;&#65292;&#25105;&#20204;&#20915;&#23450;&#26242;&#20572;CAPSA&#35838;&#19994;&#36741;&#23548;2&#21608;&#65306;2020-02-01 &#21644; 
+		  2020-02-08&#12290;&#21518;&#32493;&#36890;&#30693;&#35831;&#20851;&#27880;&#26412;&#32593;&#31449;&#12290;</p>
 		  <p class="MsoNormal">
 		  <span class="auto-style3"><strong>We are renting the facilities of MCPS and our 
 operating status is totally depend on the MCPS board's weather decision. Please 
