--- a/documents.html
+++ b/documents.html
@@ -69,7 +69,7 @@
 		<br />
 		</li>
 <li>
-<a target="_blank" href="docs/2019/Coord%20Guidelines%20Job%20Desc%202019.docx">Coordinator Guidelines 
+<a target="_blank" href="docs/2019/Coord%2520Guidelines%2520Job%2520Desc%25202020.docx">Coordinator Guidelines 
 &amp; Job Description</a><br />
 <br />
 		</li>
