--- a/documents.html
+++ b/documents.html
@@ -69,7 +69,7 @@
 		<br />
 		</li>
 <li>
-<a target="_blank" href="docs/2019/Coord%2520Guidelines%2520Job%2520Desc%25202020.docx">Coordinator Guidelines 
+<a target="_blank" href="docs/2020/Coord%20Guidelines%20Job%20Dec%202020%20V2.docx">Coordinator Guidelines 
 &amp; Job Description</a><br />
 <br />
 		</li>
@@ -94,10 +94,12 @@
 		<a target="_blank" href="docs/2019/Tutor%20Application%20Form%20%202019.doc">Tutor Application</a><br />
 		<br />
 		</li>
-		 <li><a target="_blank" href="docs/2019/Tutee%20Application%202019.pdf">K-12 Tutee Application</a><br />
-		 <br /></li>
+		 <li><a target="_blank" href="docs/2019/Tutee%20Application%202019.pdf">K-12 Tutee Application</a><br /></li>
+		 <br />
+		 <li>
+		 <a target="_blank" href="docs/2020/Coordinator%20Application%20%202020.docx.pdf">
+		 Coordinator Application</a><br /><br /></li>
 		</ul>
-		<p>&nbsp;</p>
 		<h1>Training Material <span style="font-family: TSC UKai M TT">&#22521;&#35347;&#36039;&#26009;</span></h1>
 <ul>
   	<li><a target="_blank" href="docs/2019/2019-Tutor-Training.pdf">Tutor Training</a><br />
