--- a/index.html
+++ b/index.html
@@ -221,9 +221,7 @@
 <h1>Announcement <span style='font-family:"TSC UKai M TT"'>&#36890;&#21578;</span></h1>
 
 <p class="auto-style3">
-CAPSA will open this week 2020-03-07. Please send a email to coordinators if you 
-choose not to come.&nbsp; Your absence will not be counted.&nbsp;&nbsp; CAPSA&#26412;&#21608; 
-2020-03-07&#24320;&#25918;, &#22914;&#26524;&#19981;&#26469;&#35831;&#20107;&#20808;&#36890;&#30693;&#21327;&#35843;&#21592;&#65292; &#20320;&#30340;&#32570;&#24109;&#23558;&#19981;&#20250;&#34987;&#35760;&#24405;&#12290;</p>
+CAPSA will close this week 2020-03-07. CAPSA&#26412;&#21608; 2020-03-07&#20851;&#38381;&#12290;</p>
 		  <p class="MsoNormal">
 		  <span class="auto-style3"><strong>We are renting the facilities of MCPS and our 
 operating status is totally depend on the MCPS board's weather decision. Please 
