--- a/documents.html
+++ b/documents.html
@@ -73,7 +73,7 @@
 &amp; Job Description</a><br />
 <br />
 		</li>
-<li><a target="_blank" href="docs/Tutor_Guidelines_2018.pdf">Tutor Guidelines</a><br />
+<li><a target="_blank" href="docs/2019/Tutor_Guidelines_2019.docx">Tutor Guidelines</a><br />
 <br /></li>
 <li><a target="_blank" href="docs/2019/Tutee_Guidelines_2019.docx">Tutee Guidelines (English  
 &amp; Chinese)</a></li>
@@ -86,7 +86,7 @@
 <h1>Forms <span style="font-family: TSC UKai M TT">
 &#34920;&#26684;</span></h1>
      <ul>
-		<li><a target="_blank" href="docs/Membership%20Form%202014.pdf">Membership 
+		<li><a target="_blank" href="docs/2019/Membership%20Form%202019.pdf">Membership 
 		Form</a><br />
 		<br />
 		</li>
