--- a/index.html
+++ b/index.html
@@ -111,13 +111,13 @@
 	text-decoration: underline;
 }
 
-.auto-style3 {
-	color: #0000FF;
-}
-
 	.auto-style4 {
 		color: #FF00FF;
 	}
+
+	.auto-style5 {
+	color: #0000FF;
+}
 
 	</style>
 
@@ -235,12 +235,14 @@
 <p class="auto-style4" id="announcementBox">
 	
 </p> <p class="MsoNormal">
-		  <span class="auto-style3"><strong>We are renting the facilities of MCPS and our 
-operating status is totally depend on the MCPS board's weather decision. Please 
-keep checking the MCPS website </strong></span>
-<a href="https://www.montgomeryschoolsmd.org/"><strong>
-https://www.montgomeryschoolsmd.org/</strong></a><span class="auto-style3"><strong> 
-for any weather update.</strong></span></p>
+		  <span class="auto-style5"><strong>Online 2020 - 2021 year registration 
+		  link: (2020-2021&#23398;&#24180;&#27880;&#20876;&#38142;&#25509;)<br />
+		  </strong></span><a href="https://airtable.com/shrc6G9CC7ELeEw3A">
+		  <strong>Tutees click here (&#23398;&#21592;&#28857;&#20987;&#27492;&#22788;) </strong></a><strong>
+		  <br class="auto-style5" />
+		  </strong><a href="https://airtable.com/shrAH9fz6s2LVQfH9"><strong>
+		  Tutors, Administration Associates, Coordinators click here 
+		  (&#23567;&#32769;&#24072;&#65292;&#34892;&#25919;&#21161;&#29702;&#65292;&#21327;&#35843;&#21592;&#28857;&#20987;&#27492;&#22788;)</strong></a></p>
 		  <p class="MsoNormal">
 		  <strong>Line 
 Dance Class</strong> &#9472; Line Dance summer classes are held on every Saturdays at the gym 
