--- a/index.html
+++ b/index.html
@@ -338,17 +338,16 @@ May&nbsp;&nbsp;&nbsp; 2, 9, 16<br />
 		  <div style="color: rgb(34, 34, 34); font-family: Arial, Helvetica, sans-serif; font-size: small; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(255, 255, 255); text-decoration-style: initial; text-decoration-color: initial;">
 			  <b><font color="#000000" face="Calibri, Helvetica, sans-serif">
 			  <span style="font-size: 16px;"><br />
-			  HS:&nbsp;&nbsp;</span></font>Justin Yixiang Zhang &lt;<a href="mailto:jz367132@gmail.com" style="color: rgb(17, 85, 204);" target="_blank">jz367132@gmail.com</a>&gt;</b></div>
+			  HS:&nbsp;&nbsp;</span></font>&lt;<a href="mailto:hs@capsa-mc.org" style="color: rgb(17, 85, 204);" target="_blank">hs@capsa-mc.org</a>&gt;</b></div>
 		  <div style="color: rgb(34, 34, 34); font-family: Arial, Helvetica, sans-serif; font-size: small; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(255, 255, 255); text-decoration-style: initial; text-decoration-color: initial;">
 			  <b><font color="#000000" face="Calibri, Helvetica, sans-serif">
-			  <span style="font-size: 16px;">MS:&nbsp;</span></font>Steven Tan &lt;<a href="mailto:steventan1227@gmail.com" style="color: rgb(17, 85, 204);" target="_blank">steventan1227@gmail.com</a>&gt;</b></div>
+			  <span style="font-size: 16px;">MS:&nbsp;</span></font>&lt;<a href="mailto:ms@capsa-mc.org" style="color: rgb(17, 85, 204);" target="_blank">ms@capsa-mc.org</a>&gt;</b></div>
 		  <div style="color: rgb(34, 34, 34); font-family: Arial, Helvetica, sans-serif; font-size: small; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(255, 255, 255); text-decoration-style: initial; text-decoration-color: initial;">
 			  <b><font color="#000000" face="Calibri, Helvetica, sans-serif">
-			  <span style="font-size: 16px;">UES:&nbsp;</span></font>Kenny Cheung &lt;<a href="mailto:kennyc2002@yahoo.com" style="color: rgb(17, 85, 204);" target="_blank">kennyc2002@yahoo.com</a>&gt;</b></div>
+			  <span style="font-size: 16px;">UES:&nbsp;</span></font>&lt;<a href="mailto:ues@capsa-mc.org" style="color: rgb(17, 85, 204);" target="_blank">ues@capsa-mc.org</a>&gt;</b></div>
 		  <div style="color: rgb(34, 34, 34); font-family: Arial, Helvetica, sans-serif; font-size: small; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(255, 255, 255); text-decoration-style: initial; text-decoration-color: initial;">
 			  <b><font color="#000000" face="Calibri, Helvetica, sans-serif">
-			  <span style="font-size: 16px;"><span>LES</span>:&nbsp;</span></font>Kayden 
-			  Fu &lt;<a href="mailto:k8en712@gmail.com" style="color: rgb(17, 85, 204);" target="_blank">k8en712@gmail.com</a>&gt;<br />
+			  <span style="font-size: 16px;"><span>LES</span>:&nbsp;</span></font>&lt;<a href="mailto:les@@capsa-mc.org" style="color: rgb(17, 85, 204);" target="_blank">les@capsa-mc.org</a>&gt;<br />
 			  </b></div>
 <div style="color: rgb(34, 34, 34); font-family: Arial, Helvetica, sans-s
 erif; font-size: small; font-style: normal; font-variant-ligatures: normal; font-variant-ca
@@ -358,9 +357,8 @@ t-text-stroke-width: 0px; background-color: rgb(255, 255, 255); text-decoration-
 ial; text-decoration-color: initial;">
 <b><font color="#000000" face="Calibri, Helvetica, sans-serif">
                           <span style="font-size: 16px;"><span>ADMIN</span>:&nbsp;</span></fo
-nt>Max 
-                          Xu &lt;<a href="mailto:mxxxuu@gmail.com" style="color: rgb(17, 8
-5, 204);" target="_blank">mxxxuu@@gmail.com</a>&gt;<br />
+nt>&lt;<a href="mailto:administrative-associate@capsa-mc.org" style="color: rgb(17, 8
+5, 204);" target="_blank">administrative-associate@capsa-mc.org</a>&gt;<br />
                           </b></div>
 <span class="style14">
 <p class="MsoNormal"><span style="mso-bookmark:OLE_LINK15">
