--- a/index.html
+++ b/index.html
@@ -235,14 +235,25 @@
 <p class="auto-style4" id="announcementBox">
 	
 </p> <p class="MsoNormal">
-		  <span class="auto-style5"><strong>Online 2020 - 2021 year registration 
-		  link: (2020-2021&#23398;&#24180;&#27880;&#20876;&#38142;&#25509;)<br />
+		  <span class="auto-style5"><strong><span class="style29">Online 2020 - 2021 year registration 
+		  link: (2020-2021&#23398;&#24180;&#27880;&#20876;&#38142;&#25509;)</span><br />
 		  </strong></span><a href="https://airtable.com/shrc6G9CC7ELeEw3A">
 		  <strong>Tutees click here (&#23398;&#21592;&#28857;&#20987;&#27492;&#22788;) </strong></a><strong>
 		  <br class="auto-style5" />
 		  </strong><a href="https://airtable.com/shrAH9fz6s2LVQfH9"><strong>
 		  Tutors, Administration Associates, Coordinators click here 
 		  (&#23567;&#32769;&#24072;&#65292;&#34892;&#25919;&#21161;&#29702;&#65292;&#21327;&#35843;&#21592;&#28857;&#20987;&#27492;&#22788;)</strong></a></p>
+		  <p class="MsoNormal">
+		  <strong>
+		  <span class="auto-style5">
+		  <a href="https://forms.gle/Bzamh2HZXFsdCWtBA"><span class="style29">
+		  Excused Absence Form Link (&#35831;&#20551;&#38142;&#25509;) </span></a><br />
+		  </span>
+		  <span class="style14">Asking for a leave in advance is an ethical way 
+		  to respect the time of your paired tutor / tutee.&nbsp; Fill out this 
+		  form before Friday, 7pm of the following session on Saturday.&nbsp;&nbsp; 
+		  Absences without any previous notice will lead to the removal action 
+		  from the program.</span></strong></p>
 		  <p class="MsoNormal">
 		  <strong>Line 
 Dance Class</strong> &#9472; Line Dance summer classes are held on every Saturdays at the gym 
