--- a/index.html
+++ b/index.html
@@ -342,9 +342,9 @@ Apr&nbsp;&nbsp;&nbsp; 18, 25<br />
 May&nbsp;&nbsp;&nbsp; 2, 9, 16<br />
 <span class="auto-style2">Time&nbsp; Saturday 10am - 12 noon</span><br />
 </strong></p>
-		  <p class="style24" style="height: 27px">
-		  <span class="auto-style1">&#38656;&#35201;&#35831;&#20551;&#30340;&#23567;&#32769;&#24072;&#19982;&#23398;&#29983;&#35831;&#30452;&#25509;&#32852;&#31995;&#21508;&#32452;&#21327;&#35843;&#21592;&#65288;Tutor and Tutee need 
-		  ask for execused absence, please contact lead coordinators in your 
+		  <p class="style24">
+		  <span class="auto-style1">&#21508;&#32452;&#21327;&#35843;&#21592;&#32852;&#31995;&#26041;&#24335;&#65288;Tutor and Tutee need 
+		  ask for help, please contact lead coordinators in your 
 		  group&#65289;</span></p>
 		  <div style="color: rgb(34, 34, 34); font-family: Arial, Helvetica, sans-serif; font-size: small; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(255, 255, 255); text-decoration-style: initial; text-decoration-color: initial;">
 			  <b><font color="#000000" face="Calibri, Helvetica, sans-serif">
