--- a/people.html
+++ b/people.html
@@ -67,15 +67,12 @@
 	font-family: DFKai-SB;
 	font-size: 5.46509e+019;
 }
-.auto-style1 {
-	background-repeat: repeat;
-}
-.auto-style2 {
-	background-color: #FFFFFF;
-	background-repeat: repeat-y;
-}
 .auto-style3 {
 	margin-left: 80px;
+}
+.auto-style4 {
+	background-color: #FFFFFF;
+	background-repeat: repeat-y;
 }
 </style>
 
@@ -144,22 +141,18 @@
 		<span class="style17"
 >¸³¨Æ·|</span></h1>
 		<ul>
-			<li><span class="style12">Shirley Craun 
-			<span style="line-height: 115%; font-family: &quot;TSC UKai M TT&quot;; mso-hansi-font-family: Calibri; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-ansi-language: EN-US; mso-fareast-language: EN-US; mso-bidi-language: AR-SA">
-			<span lang="ZH-TW" style="font-size:11.0pt;line-height:
-115%;mso-ascii-font-family:&quot;Times New Roman&quot;;
-mso-hansi-font-family:&quot;Times New Roman&quot;;mso-bidi-font-family:&quot;Times New Roman&quot;;
-mso-ansi-language:EN-US;mso-fareast-language:ZH-TW;mso-bidi-language:AR-SA" class="style17">¼B§µÁ¢</span></span></span><span class="style19"> </span>
+			<li><span class="style19"> Mingliang Tan
+		<span style="line-height: 115%; mso-ascii-font-family: &quot;Times New Roman&quot;; mso-hansi-font-family: &quot;Times New Roman&quot;; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-ansi-language: EN-US; mso-fareast-language: ZH-TW; mso-bidi-language: AR-SA">
+		<span class="style22">ÃÓ©ú«G</span></span> </span>
 			<span class="style12">(Chair)</span></li>
 			<li><span class="style12">Emily Chien </span><span class="style18">Â²§®§°</span><span class="style12"> 
 			(Vice Chair)</span></li>
-			<li><span class="style12">Jeng Hsu</span> <span class="style18">®}®S®S</span></li>
-			<li>Mingliang Tan
-		<span style="line-height: 115%; mso-ascii-font-family: &quot;Times New Roman&quot;; mso-hansi-font-family: &quot;Times New Roman&quot;; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-ansi-language: EN-US; mso-fareast-language: ZH-TW; mso-bidi-language: AR-SA">
-		<span class="style22">ÃÓ©ú«G</span></span></li>
-			<li><span class="style12">Karry Wei 
-			</span><span class="style18"
->ÃQ¯ô</span></li>
+			<li>Charisa Lin</li>
+			<li>Karen Lau</li>
+			<li>Melinda He</li>
+			<li>
+			<span style="font-family: &quot;Calibri&quot;,sans-serif; mso-fareast-font-family: &quot;Times New Roman&quot;; mso-ansi-language: EN-US; mso-fareast-language: ZH-CN; mso-bidi-language: AR-SA">
+			Xun Sun </span></li>
 			<li>Christine Yu
 		<span lang="zh-tw" class="style18">¸·¤è</span></li>
 			<li><span class="style12">Brigitta Dai </span>
@@ -187,102 +180,68 @@ mso-ansi-language:EN-US;mso-fareast-language:ZH-TW;mso-bidi-language:AR-SA" clas
 		</span> <span class="style17"
 >
 		°]°È</span></h1>
-		<span class="style12">Karry Wei </span> <span class="style18"
->ÃQ¯ô</span><br />
+		Melinda He<br />
 		<br/>
 		<hr style="color: #89A9C7;"/>
 		<h1 style="border-bottom-color:#FFFFFF"><span class="style12">Tutoring Program
 		</span><span class="style17"
 >½Ò·~»²¾É</span></h1>
 		<h2 class="style2"><span class="style12"><strong>Deputy Director of K-12</strong></h2>
-		<p class="style2"><span class="style12">Shirley Craun
-			<span style="line-height: 115%; font-family: &quot;TSC UKai M TT&quot;; mso-hansi-font-family: Calibri; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-ansi-language: EN-US; mso-fareast-language: EN-US; mso-bidi-language: AR-SA">
-			<span lang="ZH-TW" style="font-size:11.0pt;line-height:
-115%;mso-ascii-font-family:&quot;Times New Roman&quot;;
-mso-hansi-font-family:&quot;Times New Roman&quot;;mso-bidi-font-family:&quot;Times New Roman&quot;;
-mso-ansi-language:EN-US;mso-fareast-language:ZH-TW;mso-bidi-language:AR-SA" class="style17">
-		¼B§µÁ¢</span></span></span></p>
-		<h2 class="style2"><strong>Deputy Director of Registration</strong></h2>
-		<p class="style2">Xiaoning He&nbsp; ¦ó¤p¹ç</p>
+		<p class="style2"><span class="style12">
+		<span style="color: rgb(29, 34, 40); font-family: YahooSans, &quot;Helvetica Neue&quot;, &quot;Segoe UI&quot;, Helvetica, Arial, &quot;Lucida Grande&quot;, sans-serif; font-size: 13px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; letter-spacing: normal; orphans: 2; text-align: left; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(255, 255, 255); text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;">
+		Charisa Lin</span> </span></p>
+		<h2 class="style2"><strong>Operations Director</strong></h2>
+		<p class="style2">Karen Lau</p>
+		<h2 class="style2"><strong>Treasurer</strong></h2>
+		<p class="style2">Melinda He</p>
 		</span>
 		<h2 class="style2"><span class="style12"><strong>Line Dance Instructor</strong></h2>
 		<p class="style2">Carol Hsieh 
 		</span> 
 		<span class="style18"
 >ÁÂ°û&#23190;</span></p>
-		<h2 class="style2"><strong><span lang="zh-tw" class="style12">M</span><span class="style12">onitor / Registrar / 
-Cashiers</span></strong></h2>
-		<p class="style2">Group A:&nbsp; Qunxiu Zhu, Qing Song, Xia Chen, </p>
-		<p class="style2">Group B:&nbsp; Jennifer Yu, Yisha Yao, ShaoJian Gao, 
-		Dongliang Liu</p>
-		<h2 class="style2"><span class="style12"><strong>Mentors &amp; Coordinators</strong></h2>
+		<h2 class="style2">&nbsp;</h2>
+		<h2 class="style2"><span class="style12"><strong>Coordinators</strong></span></h2>
+		<span class="style12">
+		<h2 class="auto-style3">Administration Associate</h2>
+		</strong>
+      <ul class="style8">
+        <li>Lead Coordinator,&nbsp; 
+		Max Xu</li>
+      </ul>
 		<h2 class="style8">&nbsp;</h2>
 		<h2 class="style8"><strong>High School Group:</strong></h2>
 
       <ul class="style8">
-        <li> <span class="style12">Minshen Zhang
-		<span style="line-height: 115%; mso-ascii-font-family: &quot;Times New Roman&quot;; mso-hansi-font-family: &quot;Times New Roman&quot;; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-ansi-language: EN-US; mso-fareast-language: ZH-TW; mso-bidi-language: AR-SA" class="style18">
-		±i»Ô¥Ó</span></span><li> Lead Coordinator<span lang="FR" style="line-height: 115%; mso-fareast-font-family: PMingLiU; mso-ansi-language: FR; mso-fareast-language: EN-US; mso-bidi-language: AR-SA" class="style11">, 
-		</span>
-		  <span style="line-height: 115%; mso-fareast-font-family: PMingLiU; mso-ansi-language: FR; mso-fareast-language: EN-US; mso-bidi-language: AR-SA" class="style11">
-		  Justin Zhang <span class="style18">±i¶hµ¾</span></span></li>
-		  <li> Coordinator, </span>Harry Song</li>
-		  <li> <span class="style12">Coordinator, </span>Michael Chen</li>
+		  <li> Lead Coordinator,</span> Michael Chen</li>
+		  <li> <span class="style12">Coordinator, </span>&nbsp;Kaiwen Song</li>
 		</ul>
 		<span class="style12">
 		<h2 class="style8">	&nbsp;</h2>
 		<h2 class="style8">	<strong>Middle School Group: </strong> </h2>
       	</strong>
       <ul class="style8">
-        <li> Mentor, <span class="auto-style1">Mingliang Tan
-		<span style="line-height: 115%; mso-ascii-font-family: &quot;Times New Roman&quot;; mso-hansi-font-family: &quot;Times New Roman&quot;; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-ansi-language: EN-US; mso-fareast-language: ZH-TW; mso-bidi-language: AR-SA">
-		<span class="style22">ÃÓ©ú«G</span></span></span></span></li>
-        <li><span class="style12">Lead Coordinator,  
-		Steven Tan <span style='font-family:"TSC UKai M TT"'>
-		<span style="line-height: 115%; font-family: &quot;TSC UKai M TT&quot;; mso-hansi-font-family: &quot;Times New Roman&quot;; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-ansi-language: FR; mso-fareast-language: EN-US; mso-bidi-language: AR-SA">
-		<span class="style17">
-		<span style="line-height: 115%; mso-ascii-font-family: &quot;Times New Roman&quot;; mso-hansi-font-family: &quot;Times New Roman&quot;; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-ansi-language: FR; mso-fareast-language: ZH-TW; mso-bidi-language: AR-SA">
-		<span class="style21">ÃÓ«ä¬°</span></span></span></span></span></span></li>
+          </span>
+		<li><span class="style12">Lead Coordinator, Allen Liu</span></li>
 		<li><span class="style12">Coordinator, 
-		Tina Liu
-		<span lang="ZH-TW" style="mso-hansi-font-family: &quot;Times New Roman&quot;; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-ansi-language: EN-US; mso-fareast-language: ZH-TW; mso-bidi-language: AR-SA" class="style17">
-		<span class="style15">¼B¤pà±</span></span></span></li>
-		<li><span class="style12">Coordinator, 
-		<span class="auto-style2">Yuyu Yang</span><strong><br />
+		<span class="auto-style4">Christy Li</span><strong><br />
 		<br />
 		</li>
       </ul>
       <h2 class="style8"><strong>Upper Elementary School Group: </strong> </h2>
       	</strong>
       <ul class="style8">
-        <li> Mentor, Ping 
-		Li
-		<span style="line-height: 115%; mso-ascii-font-family: &quot;Times New Roman&quot;; mso-hansi-font-family: &quot;Times New Roman&quot;; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-ansi-language: EN-US; mso-fareast-language: ZH-TW; mso-bidi-language: AR-SA" class="style18">
-		§õ¼sµÓ</span></span></li>
-        <li><span class="style12">Lead Coordinator, 
-		Kenny Cheung </span>
-		<span lang="ZH-TW" style="mso-hansi-font-family: &quot;Times New Roman&quot;; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-ansi-language: EN-US; mso-fareast-language: ZH-TW; mso-bidi-language: AR-SA" class="style17">
-		<span class="style15">±i¹ÅÂ@</span></span></li>
-        <li><span class="style12">Coordinator, Allen Liu</span></li>
-        <li><span class="style12">Coordinator, Kyle Lee</span></li>
-		  <span class="style12"><strong>
-      </ul>
+          </span>
+        <li><span class="style12">Coordinator, Yuyu Yang</span></li>
+        <li><span class="style12">Coordinator, Henry Ren</span><li>
+		  <span class="style12">Coordinator, Valerie Lin</ul>
+        <strong>
       <h2 class="style8">&nbsp;</h2>
 		<h2 class="auto-style3">Lower Elementary School Group: </h2>
       	</strong></strong>
       <ul class="style8">
-        <li> Mentor, <span class="style12">Meizhen Hou
-		<span style="line-height: 115%; mso-ascii-font-family: &quot;Times New Roman&quot;; mso-hansi-font-family: &quot;Times New Roman&quot;; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-ansi-language: EN-US; mso-fareast-language: ZH-TW; mso-bidi-language: AR-SA" class="style18">
-		«J¬ü¬Ã</span></span></li>
-        <li>Lead Coordinator,&nbsp; 
-		<span style="line-height: 115%; mso-hansi-font-family: SimSun; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-ansi-language: EN-US; mso-fareast-language: EN-US; mso-bidi-language: AR-SA">
-		<span lang="FR" style="line-height: 115%; mso-fareast-font-family: PMingLiU; mso-ansi-language: FR; mso-fareast-language: EN-US; mso-bidi-language: AR-SA" class="style11">
-		K<span lang="en-us">ayden Fu</span></span></span><span style='font-family:"TSC UKai M TT"'><span style="line-height: 115%; font-family: &quot;TSC UKai M TT&quot;; mso-hansi-font-family: SimSun; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-ansi-language: EN-US; mso-fareast-language: EN-US; mso-bidi-language: AR-SA"><span class="style10"><span lang="FR" style="line-height: 115%; mso-fareast-font-family: PMingLiU; mso-ansi-language: FR; mso-fareast-language: EN-US; mso-bidi-language: AR-SA" class="style13"><span style="mso-tab-count:1">
-		</span></span>
-		<span style="line-height: 115%; font-family: &quot;TSC UKai M TT&quot;; mso-hansi-font-family: &quot;Times New Roman&quot;; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-ansi-language: FR; mso-fareast-language: EN-US; mso-bidi-language: AR-SA">
-		<span lang="ZH-TW" style="line-height: 115%; mso-ascii-font-family: &quot;Times New Roman&quot;; mso-hansi-font-family: &quot;Times New Roman&quot;; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-ansi-language: FR; mso-fareast-language: ZH-TW; mso-bidi-language: AR-SA" class="style18">
-		³Å»_»_</span></span></span></span></span></span></li>
-        <li><span class="style12">Coordinator, Elaine Gao</span></li>
+        <li>Lead Coordinator,&nbsp;Kyle Lee</span></li>
+        <li><span class="style12">Coordinator, Cher Chen</span></li>
       </ul>
 		<strong>
 		<p>&nbsp;</p>
