--- a/people.html
+++ b/people.html
@@ -245,8 +245,7 @@
       </ul>
 		<strong>
 		<p>&nbsp;</p>
-<p class="style7"><a href="docs/2019/org-chart.pdf">Click here to 
-view the Organizational Chart</a></p>
+<p class="style7">&nbsp;</p>
 </div>
     </div>
     <div id="footer">
