--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@ mso-ascii-font-family:&quot;Times New Roman&quot;;mso-hansi-font-family:&quot;Ti
 mso-bidi-font-family:&quot;Times New Roman&quot;;mso-ansi-language:EN-US;mso-fareast-language:
 ZH-TW;mso-bidi-language:AR-SA">&#26597;&#35426;&#12290;</span></p>
 <p class="style24">
-<strong><span class="auto-style2">Calendar of 2020 to 2021:</span></strong></p>
+<strong><span class="auto-style2">Calendar of 2020:</span></strong></p>
 		  <p class="style24">
 		  <strong>Sep&nbsp;&nbsp; 12, 19, 26<br />
 		  Oct&nbsp;&nbsp;&nbsp; 3, 10, 17, 24, 31<br />
