--- a/people.html
+++ b/people.html
@@ -74,6 +74,11 @@
 	background-color: #FFFFFF;
 	background-repeat: repeat-y;
 }
+.auto-style5 {
+	font-family: DFKai-SB;
+	background-color: #FFFFFF;
+	background-repeat: repeat-y;
+}
 </style>
 
 
@@ -141,31 +146,28 @@
 		<span class="style17"
 >¸³¨Æ·|</span></h1>
 		<ul>
-			<li><span class="style19"> Mingliang Tan
+			<li><span class="style12"> Mingliang Tan
 		<span style="line-height: 115%; mso-ascii-font-family: &quot;Times New Roman&quot;; mso-hansi-font-family: &quot;Times New Roman&quot;; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-ansi-language: EN-US; mso-fareast-language: ZH-TW; mso-bidi-language: AR-SA">
-		<span class="style22">ÃÓ©ú«G</span></span> </span>
-			<span class="style12">(Chair)</span></li>
-			<li><span class="style12">Emily Chien </span><span class="style18">Â²§®§°</span><span class="style12"> 
-			(Vice Chair)</span></li>
+		<span class="auto-style5">ÃÓ©ú«G</span></span> (Chair)</span></li>
+			<li>
+			<span class="style12" style="mso-fareast-font-family: &quot;Times New Roman&quot;; mso-ansi-language: EN-US; mso-fareast-language: ZH-CN; mso-bidi-language: AR-SA">
+			Xun Sun&nbsp; </span>
+			<span style="font-family: &quot;Calibri&quot;,sans-serif; mso-fareast-font-family: &quot;Times New Roman&quot;; mso-ansi-language: EN-US; mso-fareast-language: ZH-CN; mso-bidi-language: AR-SA">
+			<span class="style12">(Vice Chair)</span></span></li>
+			<li><span class="style12">Emily Chien <span class="style17">Â²§®§°</span></li>
 			<li>Charisa Lin</li>
 			<li>Karen Lau</li>
 			<li>Melinda He</li>
-			<li>
-			<span style="font-family: &quot;Calibri&quot;,sans-serif; mso-fareast-font-family: &quot;Times New Roman&quot;; mso-ansi-language: EN-US; mso-fareast-language: ZH-CN; mso-bidi-language: AR-SA">
-			Xun Sun </span></li>
 			<li>Christine Yu
-		<span lang="zh-tw" class="style18">¸·¤è</span></li>
-			<li><span class="style12">Brigitta Dai </span>
-			<span class="style18"
->±çÄR¯]</SPAN><span class="style12"> 
+		<span lang="zh-tw" class="style17">¸·¤è</span></span></li>
+			<li><span class="style12">Brigitta Dai ±çÄR¯] 
 			(Lifetime/Non-Voting)</span></li>
-			<li>Aldrin Leung
-			<span class="style18"
->±ç°¶®Ú</span><span class="style10"
-> (Lifetime/Non-Voting)</span></li>
-			<li>Betty Leung<span class="style25"> </span>
-			<span style="mso-ascii-theme-font: minor-latin; mso-fareast-font-family: Calibri; mso-fareast-theme-font: minor-latin; mso-hansi-theme-font: minor-latin; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-bidi-theme-font: minor-bidi; mso-ansi-language: EN-US; mso-fareast-language: EN-US; mso-bidi-language: AR-SA" class="style18">
-			¦ó§öªÚ</span><span lang="zh-tw" style="mso-ascii-theme-font: minor-latin; mso-fareast-font-family: Calibri; mso-fareast-theme-font: minor-latin; mso-hansi-theme-font: minor-latin; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-bidi-theme-font: minor-bidi; mso-ansi-language: EN-US; mso-fareast-language: EN-US; mso-bidi-language: AR-SA" class="style12"> 
+			<li><span class="style12">Aldrin Leung
+			<span class="style17"
+>±ç°¶®Ú</span> (Lifetime/Non-Voting)</span></li>
+			<li><span class="style12">Betty Leung<span class="style25"> </span>
+			<span style="mso-ascii-theme-font: minor-latin; mso-fareast-font-family: Calibri; mso-fareast-theme-font: minor-latin; mso-hansi-theme-font: minor-latin; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-bidi-theme-font: minor-bidi; mso-ansi-language: EN-US; mso-fareast-language: EN-US; mso-bidi-language: AR-SA" class="style17">
+			¦ó§öªÚ</span></span><span lang="zh-tw" style="mso-ascii-theme-font: minor-latin; mso-fareast-font-family: Calibri; mso-fareast-theme-font: minor-latin; mso-hansi-theme-font: minor-latin; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-bidi-theme-font: minor-bidi; mso-ansi-language: EN-US; mso-fareast-language: EN-US; mso-bidi-language: AR-SA" class="style12"> 
 			(L</span><span style="font-family: &quot;Calibri&quot;,&quot;sans-serif&quot;; mso-ascii-theme-font: minor-latin; mso-fareast-font-family: Calibri; mso-fareast-theme-font: minor-latin; mso-hansi-theme-font: minor-latin; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-bidi-theme-font: minor-bidi; mso-ansi-language: EN-US; mso-fareast-language: EN-US; mso-bidi-language: AR-SA"><span style="mso-ascii-theme-font: minor-latin; mso-fareast-font-family: Calibri; mso-fareast-theme-font: minor-latin; mso-hansi-theme-font: minor-latin; mso-bidi-font-family: &quot;Times New Roman&quot;; mso-bidi-theme-font: minor-bidi; mso-ansi-language: EN-US; mso-fareast-language: EN-US; mso-bidi-language: AR-SA" class="style12">ifetime/Non-Voting)</span></span></li>
 		</ul>
 		<hr style="color: #89A9C7;"/>
@@ -190,26 +192,24 @@
 		<p class="style2"><span class="style12">
 		<span style="color: rgb(29, 34, 40); font-family: YahooSans, &quot;Helvetica Neue&quot;, &quot;Segoe UI&quot;, Helvetica, Arial, &quot;Lucida Grande&quot;, sans-serif; font-size: 13px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; letter-spacing: normal; orphans: 2; text-align: left; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(255, 255, 255); text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;">
 		Charisa Lin</span> </span></p>
+		<h2 class="style2"><strong>Deputy Director</strong></h2>
+		<p class="style2">Melinda He</p>
 		<h2 class="style2"><strong>Operations Director</strong></h2>
 		<p class="style2">Karen Lau</p>
-		<h2 class="style2"><strong>Treasurer</strong></h2>
-		<p class="style2">Melinda He</p>
 		</span>
-		<h2 class="style2"><span class="style12"><strong>Line Dance Instructor</strong></h2>
+		<h2 class="style2"><span class="style12"><strong>Line Dance Instructor 
+		(program suspended duo covid19)</strong></h2>
 		<p class="style2">Carol Hsieh 
 		</span> 
 		<span class="style18"
 >ÁÂ°û&#23190;</span></p>
-		<h2 class="style2">&nbsp;</h2>
+		<h2 class="style2"><span class="style12"><strong>Administration 
+		Associate Mentor</strong></span></h2>
+		<p class="style2">Max Xu</p>
 		<h2 class="style2"><span class="style12"><strong>Coordinators</strong></span></h2>
 		<span class="style12">
-		<h2 class="auto-style3">Administration Associate</h2>
+		<h2 class="auto-style3">&nbsp;</h2>
 		</strong>
-      <ul class="style8">
-        <li>Lead Coordinator,&nbsp; 
-		Max Xu</li>
-      </ul>
-		<h2 class="style8">&nbsp;</h2>
 		<h2 class="style8"><strong>High School Group:</strong></h2>
 
       <ul class="style8">
