--- a/people.html
+++ b/people.html
@@ -157,7 +157,7 @@
 			<li><span class="style12">Emily Chien <span class="style17">簡妙妍</span></li>
 			<li>Charisa Lin</li>
 			<li>Karen Lau</li>
-			<li>Melinda He</li>
+			<li>Melinda He 何小宁</li>
 			<li>Christine Yu
 		<span lang="zh-tw" class="style17">虞方</span></span></li>
 			<li><span class="style12">Brigitta Dai 梁麗珠 
@@ -182,7 +182,7 @@
 		</span> <span class="style17"
 >
 		財務</span></h1>
-		Melinda He<br />
+		Melinda He&nbsp;&nbsp; <span class="style12">何小宁</span><br />
 		<br/>
 		<hr style="color: #89A9C7;"/>
 		<h1 style="border-bottom-color:#FFFFFF"><span class="style12">Tutoring Program
@@ -193,7 +193,7 @@
 		<span style="color: rgb(29, 34, 40); font-family: YahooSans, &quot;Helvetica Neue&quot;, &quot;Segoe UI&quot;, Helvetica, Arial, &quot;Lucida Grande&quot;, sans-serif; font-size: 13px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; letter-spacing: normal; orphans: 2; text-align: left; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(255, 255, 255); text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;">
 		Charisa Lin</span> </span></p>
 		<h2 class="style2"><strong>Deputy Director</strong></h2>
-		<p class="style2">Melinda He</p>
+		<p class="style2">Melinda He&nbsp; <span class="style12">何小宁</span></p>
 		<h2 class="style2"><strong>Operations Director</strong></h2>
 		<p class="style2">Karen Lau</p>
 		</span>
