--- a/people.html
+++ b/people.html
@@ -198,7 +198,7 @@
 		<p class="style2">Karen Lau</p>
 		</span>
 		<h2 class="style2"><span class="style12"><strong>Line Dance Instructor 
-		(program suspended duo covid19)</strong></h2>
+		(program suspended due to covid19)</strong></h2>
 		<p class="style2">Carol Hsieh 
 		</span> 
 		<span class="style18"
@@ -232,7 +232,7 @@
       	</strong>
       <ul class="style8">
           </span>
-        <li><span class="style12">Coordinator, Yuyu Yang</span></li>
+        <li><span class="style12">Lead Coordinator, Yuyu Yang</span></li>
         <li><span class="style12">Coordinator, Henry Ren</span><li>
 		  <span class="style12">Coordinator, Valerie Lin</ul>
         <strong>
