--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@ ZH-TW;mso-bidi-language:AR-SA">&#26597;&#35426;&#12290;</span></p>
 		  <p class="style24">
 		  <strong>Sep&nbsp;&nbsp; 12, 19, 26<br />
 		  Oct&nbsp;&nbsp;&nbsp; 3, 10, 17, 24, 31<br />
-		  Nov&nbsp;&nbsp;&nbsp; 7, 14, 21, 28<br />
+		  Nov&nbsp;&nbsp;&nbsp; 7, 14, 21<br />
 		  Dec&nbsp;&nbsp;&nbsp; 5, 12, 19, <br />
 		  <br />
 <span class="auto-style2">Time&nbsp; Saturday 10am - 12 noon</span><br />
