--- a/documents.html
+++ b/documents.html
@@ -118,8 +118,11 @@
 <h1>Past Award Ceremony Program <span style="font-family: TSC UKai M TT">&#36942;&#21435;&#38930;&#29518;&#20856;&#31150;&#31243;&#24207;</span></h1>
 		<ul>
 	
-	<li><a target="_blank" href="docs/2019_award_ceremony_program.pdf">Award Ceremony 2019</a><br />
+	<li><a target="_blank" href="docs/2020_award_ceremony_program.pdf">Award Ceremony 20</a>20<br />
 	</li><br />
+    	
+	<li><a target="_blank" href="docs/2019_award_ceremony_program.pdf">Award Ceremony 2019</a><br />
+	</li>
     <li><a target="_blank" href="docs/2018_award_ceremony_program.pdf">Award Ceremony 2018</a><br />
 	</li><br />
 	<li><a target="_blank" href="docs/2017_award_ceremony_program.pdf">Award Ceremony 2017</a><br />
